fix(LiveCodeExample): fix textarea & pre word wrapping
styles from `react-simple-code-editor` are no good for us
https://github.com/satya164/react-simple-code-editor/blob/master/src/index.js#L631

--- a/packages/wix-storybook-utils/src/LiveCodeExample/index.scss
+++ b/packages/wix-storybook-utils/src/LiveCodeExample/index.scss
@@ -95,8 +95,9 @@
     height: auto;
   }
 
-  textarea {
+  textarea, pre {
     outline: none;
+    word-break: break-all !important; /* unfortunately, to be more specific than inline-style coming from 3rd party js :( */
   }
 
   // Theme extracted from
